@@ -1,3 +1,8 @@
+2007-02-12  Stefan Jahn  <stefan@lkcc.org>
+
+	* microstrip/msstep.cpp: Fixed Z-parameter matrix calculation.
+	Thanks <c.peschke@gsi.de> for pointing out this bug.
+
 2007-02-07  Stefan Jahn  <stefan@lkcc.org>
 
 	* microstrip/mscross.cpp: Hopefully finally fixed the
